Bug 1813562. Fix leak with color profile and transform in avif decoder. r=Zaggy1024

We run this code for every frame of animated images, so we need to make the code handle that.

Differential Revision: https://phabricator.services.mozilla.com/D172994